--- a/css/styles.css
+++ b/css/styles.css
@@ -222,10 +222,6 @@ img {
   text-transform: uppercase;
 }
 
-.hero-btn {
-  padding-top: 30px;
-}
-
 /* section */
 .section {
   padding-bottom: 94px;
@@ -466,7 +462,11 @@ background-color: var(--accent-color);
   margin-bottom: 9px;
 }
 
-.join-us-title {
+.join-us {
+    margin-right: 93px;
+}
+
+.join-us-title, .sign-up-title {
   margin-bottom: 20px;
 
   text-transform: uppercase;
@@ -512,6 +512,52 @@ background-color: var(--accent-color);
 
 .contact-us-footer {
   margin-right: 70px;
+}
+
+/* .sign-up {
+    margin-left: 93px;
+} */
+
+
+.sign-up-wrap {
+    display: flex;
+    align-items: baseline;
+}
+
+.sign-up-btn {
+    position: relative;
+    margin-left: 12px;
+    width: 200px;
+    padding-right: 62px;
+    padding-left: 28px;
+}
+
+.sign-up-btn:hover, .sign-up-btn:focus {
+    color: #fff;
+    background-color: var(--accent-color);
+}
+
+.send-icon {
+    position: absolute;
+    right: 28px;
+    bottom: 0;
+    transform: translateY(-50%);
+    fill: #fff;
+
+}
+
+/* ХОВЕР И ФОКУС НА КНОПКУ!!! */
+
+.sign-up-input {
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 15px;
+    color: #fff;
 }
 
 /* Projects */
@@ -651,6 +697,7 @@ background-color: var(--accent-color);
     left: 50%;
     width: 528px;
     height: 581px;
+    padding: 40px;
 
     background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -685,3 +732,138 @@ background-color: var(--accent-color);
 .close-icon{
     fill: #000000;
 }
+
+.header-form {
+    margin-bottom: 12px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+    text-align: center;    
+}
+
+
+.form-input {
+    /* margin-bottom: 10px; */
+    padding-left: 40px;
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-label {
+    display: block;
+    margin-bottom: 4px;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: var(--secondary-text-color);
+}
+
+.form-input-wrap {
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.form-input-wrap:focus-within .form-input {
+    outline: 1px solid var(--accent-color);
+    border: none;
+}
+
+.form-input-wrap:focus-within .name-icon,
+.form-input-wrap:focus-within .tel-icon,
+.form-input-wrap:focus-within .email-icon {
+    fill: var(--accent-color);
+}
+
+.form-field:focus-within .form-text {
+    outline: 1px solid var(--accent-color);
+    border: none;
+}
+
+.name-icon, .tel-icon, .email-icon {
+    position: absolute;
+    left: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.label-checkbox {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--secondary-text-color);
+}
+
+.label-checkbox-link {
+    color: var(--accent-color);
+}
+
+.form-checkbox-wrap {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 16px;
+    height: 15px;
+    border: 1px solid #000000;
+    border-radius: 2px;
+    margin-right: 8px;
+}
+
+.form-checkbox-icon {
+    fill: transparent;
+}
+
+.form-checkbox:checked + .label-checkbox>.form-checkbox-wrap {
+    background-color: var(--accent-color);
+    border: none;
+}
+.form-checkbox:checked + .label-checkbox .form-checkbox-icon {
+    fill: #fff;
+}
+
+.submit-btn {
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    /* Уточнить про тень, если не при ховере */
+}
+
+.submit-btn:hover, .submit-btn:focus {
+    background-color: var(--accent-color);
+    color: #fff;
+}
+
+.form-text {
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+    margin-bottom: 20px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    resize: none;
+    outline: none;
+    /* Попробовать соединить свойства с форм-инпутом */
+}
+.form-text::placeholder {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    
+    color: rgba(117, 117, 117, 0.5);
+}
+
+
+/* ВВЕДИТЕ ТЕКСТ - это плейсхолдер?? */
