--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --secondary-text-color: #757575;
   --btn-color: #ffffff;
   --accent-color: #2196f3;
+  --hover-color: #188CE8;
   --background-section-color: #2f303a;
 }
 
@@ -68,14 +69,13 @@ img {
   box-shadow: none;
   cursor: pointer;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
 .button:hover,
 .button:focus {
-  color: #188ce8;
-  background-color: #fff;
+  background-color: var(--hover-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -511,12 +511,9 @@ background-color: var(--accent-color);
 }
 
 .contact-us-footer {
+    flex-grow: 1;
   margin-right: 70px;
 }
-
-/* .sign-up {
-    margin-left: 93px;
-} */
 
 
 .sign-up-wrap {
@@ -532,11 +529,6 @@ background-color: var(--accent-color);
     padding-left: 28px;
 }
 
-.sign-up-btn:hover, .sign-up-btn:focus {
-    color: #fff;
-    background-color: var(--accent-color);
-}
-
 .send-icon {
     position: absolute;
     right: 28px;
@@ -546,18 +538,16 @@ background-color: var(--accent-color);
 
 }
 
-/* ХОВЕР И ФОКУС НА КНОПКУ!!! */
-
 .sign-up-input {
     width: 358px;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
-    box-sizing: border-box;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background-color: transparent;
     padding: 15px;
     color: #fff;
+    outline: none;
 }
 
 /* Projects */
@@ -745,15 +735,30 @@ background-color: var(--accent-color);
 }
 
 
-.form-input {
-    /* margin-bottom: 10px; */
+.form-input, .form-text{
     padding-left: 40px;
     width: 100%;
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    outline: none;
 
-    transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-text {
+    height: 120px;
+    padding: 12px 16px;
+    margin-bottom: 20px;
+    resize: none;
+}
+
+.form-text::placeholder {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    
+    color: rgba(117, 117, 117, 0.5);
 }
 
 .form-label {
@@ -771,8 +776,7 @@ background-color: var(--accent-color);
 }
 
 .form-input-wrap:focus-within .form-input {
-    outline: 1px solid var(--accent-color);
-    border: none;
+    border-color: var(--accent-color);
 }
 
 .form-input-wrap:focus-within .name-icon,
@@ -838,32 +842,6 @@ background-color: var(--accent-color);
     display: block;
     margin: 0 auto;
     width: 200px;
-    /* Уточнить про тень, если не при ховере */
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.submit-btn:hover, .submit-btn:focus {
-    background-color: var(--accent-color);
-    color: #fff;
-}
-
-.form-text {
-    width: 100%;
-    height: 120px;
-    padding: 12px 16px;
-    margin-bottom: 20px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    resize: none;
-    outline: none;
-    /* Попробовать соединить свойства с форм-инпутом */
-}
-.form-text::placeholder {
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.01em;
-    
-    color: rgba(117, 117, 117, 0.5);
-}
-
-
-/* ВВЕДИТЕ ТЕКСТ - это плейсхолдер?? */
