--- a/css/styles.css
+++ b/css/styles.css
@@ -516,26 +516,23 @@ background-color: var(--accent-color);
 }
 
 
-.sign-up-wrap {
+.sign-up-form {
     display: flex;
     align-items: baseline;
 }
 
 .sign-up-btn {
-    position: relative;
+    display: inline-flex;
+    align-items: center;
     margin-left: 12px;
     width: 200px;
-    padding-right: 62px;
+    padding-right: 28px;
     padding-left: 28px;
 }
 
 .send-icon {
-    position: absolute;
-    right: 28px;
-    bottom: 0;
-    transform: translateY(-50%);
+    margin-left: 10px;
     fill: #fff;
-
 }
 
 .sign-up-input {
@@ -734,6 +731,17 @@ background-color: var(--accent-color);
     text-align: center;    
 }
 
+.form-field {
+    margin-bottom: 10px;
+}
+
+.form-field-textarea {
+    margin-bottom: 20px;
+}
+
+.form-field-checkbox {
+    margin-bottom: 30px;
+}
 
 .form-input, .form-text{
     padding-left: 40px;
@@ -747,6 +755,7 @@ background-color: var(--accent-color);
 }
 
 .form-text {
+    display: block;
     height: 120px;
     padding: 12px 16px;
     margin-bottom: 20px;
@@ -772,7 +781,6 @@ background-color: var(--accent-color);
 
 .form-input-wrap {
     position: relative;
-    margin-bottom: 10px;
 }
 
 .form-input-wrap:focus-within .form-input {
@@ -802,12 +810,13 @@ background-color: var(--accent-color);
 .label-checkbox {
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
+    justify-content: center;
 
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
+    cursor: pointer;
 }
 
 .label-checkbox-link {
@@ -821,9 +830,13 @@ background-color: var(--accent-color);
 
     width: 16px;
     height: 15px;
-    border: 1px solid #000000;
+    border: 2px solid #000000;
     border-radius: 2px;
     margin-right: 8px;
+}
+
+.form-checkbox:focus + .label-checkbox>.form-checkbox-wrap {
+    outline: 1px solid var(--accent-color);
 }
 
 .form-checkbox-icon {
